# template_for_stm32f103c8t6

./: Cargo.toml  README.md
.cargo/: config  debug.gdb
src/: main.rs
